Minor updates to maps

--- a/PanArctic_DSL_currents.Rmd
+++ b/PanArctic_DSL_currents.Rmd
@@ -192,6 +192,17 @@ latitudes <- data.frame(lat = rep(seq(0, 90, 10), each = 200)) %>%
          y = st_coordinates(.)[,2] * 10^-5,
          lat = factor(lat)) %>%
   st_drop_geometry()
+can_usa <- data.frame(lon = rep(-141, 200)) %>%
+  mutate(lat =  seq(0, 69.64, length.out = 200)) %>%
+  ungroup() %>%
+  # Transform into sf
+  st_as_sf(coords = c("lon", "lat"), crs = st_crs("EPSG:4326"), remove = F) %>% 
+  # Change projection
+  st_transform(crs = st_crs(proj_coast)) %>%
+  mutate(x = st_coordinates(.)[,1] * 10^-5,
+         y = st_coordinates(.)[,2] * 10^-5, 
+         lon = factor(lon)) %>%
+  st_drop_geometry()
 ```
 Here is a plot of current velocity at 380 m depth averaged over 2015-2017.
 
@@ -342,7 +353,7 @@ The following plot show annual mean current velocity in 2016 with a `r paste0(re
 map_velo <- velo_new %>%
   ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
   # Cover areas that are shallower than our data
   geom_tile(data = subset(velo_new_HD, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
   # Coast
@@ -361,7 +372,7 @@ map_velo <- velo_new %>%
   # geom_tile(data = SA_new, aes(x = x, y = y), fill = NA, colour = "red", size = 3.8) + 
   # Scales
   scale_fill_viridis_c("V", option = "viridis", limits = c(0, 6.5), end = 1, oob = scales::squish,
-                       alpha = 0.5, breaks = seq(0, 10, 0.5)) +
+                       alpha = 0.5, breaks = seq(0, 10, 1)) +
   scale_x_continuous(breaks = seq(-50, 50 , 5)) +
   scale_y_continuous(breaks = seq(-50, 50 , 5)) +
   coord_fixed(xlim = c(-28, 28), ylim = c(-34, 20), expand = F) +
@@ -382,7 +393,7 @@ Base map.
 map_base <- velo_new_HD %>%
   ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
   # Cover areas that are shallower than our data
   geom_tile(data = subset(velo_new_HD, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
   # Coast
@@ -390,18 +401,19 @@ map_base <- velo_new_HD %>%
   # Current vectors
   # geom_arrow(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity), size = 0.2, arrow.angle = 30,
   #            arrow.type = "open", arrow.length = 0.5) +
+  # Graticules 
+  geom_path(data = latitudes, aes(x = x, y = y, group = lat), col = "grey20", size = 0.2, alpha = 0.9) +
+  geom_path(data = longitudes, aes(x = x, y = y, group = lon), col = "grey20", size = 0.2, alpha = 0.9) +
+  geom_path(data = can_usa, aes(x = x, y = y, group = lon), col = "grey50", size = 0.2) +
   # Arctic circle
   geom_path(data = arctic_circle, aes(x = x, y = y), col = "white", lty = 2, size = 0.3) +
-  # Graticules 
-  geom_path(data = latitudes, aes(x = x, y = y, group = lat), col = "grey20", size = 0.15, alpha = 0.75) +
-  geom_path(data = longitudes, aes(x = x, y = y, group = lon), col = "grey20", size = 0.15, alpha = 0.75) +
   # Plot North Pole
   # geom_point(aes(x = 0, y = 0), shape = 3, size = 0.7, stroke = 0.7, col = "#F05223") +
   # GAM locations
   # geom_tile(data = SA_new, aes(x = x, y = y), fill = NA, colour = "red", size = 3.6) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6.5), end = 0.95, oob = scales::squish, 
-                     alpha = 0.7, breaks = seq(0, 10, 0.5)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
+                     alpha = 0.7, breaks = seq(0, 10, 1)) +
   coord_fixed(xlim = c(-45, 45), ylim = c(-45, 45), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "right",
@@ -423,15 +435,15 @@ map_vectors <- velo_new %>%
   # filter(between(x, -40, 40) & between(y, -45, 40)) %>%
   ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
   # Coast
   geom_polygon(data = coast, aes(x = x, y = y, group = group), fill = "transparent") +
   # Current vectors
   geom_arrow(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity), skip = 0, size = 0.15, 
              arow.angle = 30, arrow.type = "open", arrow.length = 0.75) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6.5), end = 0.95, oob = scales::squish, 
-                     alpha = 0, breaks = seq(0, 10, 0.5)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
+                     alpha = 0, breaks = seq(0, 10, 1)) +
   coord_fixed(xlim = c(-45, 45), ylim = c(-45, 45), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "right",
@@ -479,7 +491,7 @@ ymax <- 4
 map_BA <- velo_HD %>%
  ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
   # Cover areas that are shallower than our data
   geom_tile(data = subset(velo_HD, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
   # Coast
@@ -487,18 +499,18 @@ map_BA <- velo_HD %>%
   # # Current vectors
   # geom_arrow(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity), skip = 1, size = 0.15, arrow.angle = 30,
   #            arrow.type = "open", arrow.length = 0.5) +
+  # Graticules 
+  geom_path(data = latitudes, aes(x = x, y = y, group = lat), col = "grey20", size = 0.2, alpha = 0.9) +
+  geom_path(data = longitudes, aes(x = x, y = y, group = lon), col = "grey20", size = 0.2, alpha = 0.9) +
   # Arctic circle
   geom_path(data = arctic_circle, aes(x = x, y = y), col = "grey80", lty = 2, size = 0.3) +
-  # Graticules 
-  geom_path(data = latitudes, aes(x = x, y = y, group = lat), col = "grey20", size = 0.15, alpha = 0.75) +
-  geom_path(data = longitudes, aes(x = x, y = y, group = lon), col = "grey20", size = 0.15, alpha = 0.75) +
   # Plot North Pole
   geom_point(aes(x = 0, y = 0), shape = 4, size = 0.7, stroke = 0.3, col = "white") +
   # GAM locations
   # geom_tile(data = SA_new, aes(x = x, y = y), fill = NA, colour = "red", size = 12) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6.5), end = 0.95, oob = scales::squish, 
-                     alpha = 0.7, breaks = seq(0, 10, 0.5)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
+                     alpha = 0.7, breaks = seq(0, 10, 1)) +
   coord_fixed(xlim = c(xmin, xmax), ylim = c(ymin, ymax), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "none",
@@ -518,8 +530,8 @@ map_BA_vector <- velo_HD %>%
   geom_arrow(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity), skip = 1, size = 0.2, arrow.angle = 30,
              arrow.type = "open", arrow.length = 0.5) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6.5), end = 0.95, oob = scales::squish, 
-                     alpha = 0, breaks = seq(0, 10, 0.5)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
+                     alpha = 0, breaks = seq(0, 10, 1)) +
   coord_fixed(xlim = c(xmin, xmax), ylim = c(ymin, ymax), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "none",
@@ -547,7 +559,7 @@ ymax <- -4
 map_BB <- velo_HD %>%
   ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
   # Cover areas that are shallower than our data
   geom_tile(data = subset(velo_HD, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
   # Coast
@@ -555,18 +567,18 @@ map_BB <- velo_HD %>%
   # Current vectors
   # geom_arrow(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity), skip = 1, size = 0.15, arrow.angle = 30,
   #            arrow.type = "open", arrow.length = 0.5) +
+  # Graticules 
+  geom_path(data = latitudes, aes(x = x, y = y, group = lat), col = "grey20", size = 0.2, alpha = 0.9) +
+  geom_path(data = longitudes, aes(x = x, y = y, group = lon), col = "grey20", size = 0.2, alpha = 0.9) +
   # Arctic circle
   geom_path(data = arctic_circle, aes(x = x, y = y), col = "white", lty = 2, size = 0.3) +
-  # Graticules 
-  geom_path(data = latitudes, aes(x = x, y = y, group = lat), col = "grey20", size = 0.15, alpha = 0.75) +
-  geom_path(data = longitudes, aes(x = x, y = y, group = lon), col = "grey20", size = 0.15, alpha = 0.75) +
   # Plot North Pole
   geom_point(aes(x = 0, y = 0), shape = 4, size = 0.7, stroke = 0.3, col = "white") +
   # GAM locations
   # geom_tile(data = SA_new, aes(x = x, y = y), fill = NA, colour = "red", size = 11) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6.5), end = 0.95, oob = scales::squish, 
-                     alpha = 0.7, breaks = seq(0, 10, 0.5)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
+                     alpha = 0.7, breaks = seq(0, 10, 1)) +
   coord_fixed(xlim = c(xmin, xmax), ylim = c(ymin, ymax), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "none",
@@ -586,8 +598,8 @@ map_BB_vector <- velo_HD %>%
   geom_arrow(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity), skip = 1, size = 0.2, arrow.angle = 30,
              arrow.type = "open", arrow.length = 0.5) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6.5), end = 0.95, oob = scales::squish, 
-                     alpha = 0, breaks = seq(0, 10, 0.5)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
+                     alpha = 0, breaks = seq(0, 10, 1)) +
   coord_fixed(xlim = c(xmin, xmax), ylim = c(ymin, ymax), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "none",
@@ -615,7 +627,7 @@ ymax <- 6
 map_BF <- velo_HD %>%
   ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
   # Cover areas that are shallower than our data
   geom_tile(data = subset(velo_HD, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
   # Coast
@@ -623,18 +635,19 @@ map_BF <- velo_HD %>%
   # # Current vectors
   # geom_arrow(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity), skip = 1, size = 0.15, arrow.angle = 30,
   #            arrow.type = "open", arrow.length = 0.5) +
+  # Graticules 
+  geom_path(data = latitudes, aes(x = x, y = y, group = lat), col = "grey20", size = 0.2, alpha = 0.9) +
+  geom_path(data = longitudes, aes(x = x, y = y, group = lon), col = "grey20", size = 0.2, alpha = 0.9) +
+  geom_path(data = can_usa, aes(x = x, y = y, group = lon), col = "grey50", size = 0.2) +
   # Arctic circle
   geom_path(data = arctic_circle, aes(x = x, y = y), col = "white", lty = 2, size = 0.3) +
-  # Graticules 
-  geom_path(data = latitudes, aes(x = x, y = y, group = lat), col = "grey20", size = 0.15, alpha = 0.75) +
-  geom_path(data = longitudes, aes(x = x, y = y, group = lon), col = "grey20", size = 0.15, alpha = 0.75) +
   # Plot North Pole
   geom_point(aes(x = 0, y = 0), shape = 4, size = 0.7, stroke = 0.3, col = "white") +
   # GAM locations
   # geom_tile(data = SA_new, aes(x = x, y = y), fill = NA, colour = "red", size = 13) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6.5), end = 0.95, oob = scales::squish, 
-                     alpha = 0.7, breaks = seq(0, 10, 0.5)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
+                     alpha = 0.7, breaks = seq(0, 10, 1)) +
   coord_fixed(xlim = c(xmin, xmax), ylim = c(ymin, ymax), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "none",
@@ -654,8 +667,8 @@ map_BF_vector <- velo_HD %>%
   geom_arrow(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity), skip = 1, size = 0.2, arrow.angle = 30,
              arrow.type = "open", arrow.length = 0.5) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6.5), end = 0.95, oob = scales::squish, 
-                     alpha = 0, breaks = seq(0, 10, 0.5)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
+                     alpha = 0, breaks = seq(0, 10, 1)) +
   coord_fixed(xlim = c(xmin, xmax), ylim = c(ymin, ymax), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "none",
