--- a/PanArctic_DSL_currents.Rmd
+++ b/PanArctic_DSL_currents.Rmd
@@ -137,6 +137,13 @@ velo <- velo_raw %>%
          vyo = vyo * 100,
          velocity = sqrt(vxo^2 + vyo^2),
          angle_deg = ((atan((vyo / vxo)) * 180) / pi) - 180)
+
+velo_full <- velo %>%
+  group_by(x, y) %>%
+  summarise(vxo = mean(vxo)) %>%
+  ungroup() %>%
+  complete(x = seq(min(x) - (20 * (12.5 / 100)), max(x) + (20 * (12.5 / 100)), 12.5 / 100),
+           y = seq(min(y) - (20 * (12.5 / 100)), max(y) + (20 * (12.5 / 100)), 12.5 / 100))
 ```
 
 The original projection of the data is: *`r proj_current`*
@@ -264,7 +271,7 @@ Define projections and calculate the mean velocity and direction for each grid c
 r_current <- raster(extent(extent_current), crs = proj_current, resolution = res_current)
 
 # Set new projection 
-res_new <- c(125, 125) # in km
+res_new <- c(100, 100) # in km
 r_new <- raster(extent(extent_current), crs = proj_current, resolution = res_new / 100)
 
 # Convert to spatial data
@@ -311,8 +318,8 @@ velo_new_HD <- SpatialPointsDataFrame(
   as.data.frame() %>% 
   # Add year
   mutate(velocity = sqrt(vxo^2 + vyo^2)) %>%
-  complete(x = seq(min(x - 2 * (res_new_HD[1] / 100)), max(x + 2 * (res_new_HD[2] / 100)), res_new_HD[1] / 100), 
-           y = seq(min(y - 2 * (res_new_HD[2] / 100)), max(y + 2 * (res_new_HD[2] / 100)), res_new_HD[2] / 100))
+  complete(x = seq(min(x - 5 * (res_new_HD[1] / 100)), max(x + 5 * (res_new_HD[2] / 100)), res_new_HD[1] / 100), 
+           y = seq(min(y - 5 * (res_new_HD[2] / 100)), max(y + 5 * (res_new_HD[2] / 100)), res_new_HD[2] / 100))
 ```
 
 I also superimpose the grid cells of the GAM on the oceanic circulation map. First I load GAM data and re project their coordinates in the current velocity projection.
@@ -353,14 +360,11 @@ The following plot show annual mean current velocity in 2016 with a `r paste0(re
 map_velo <- velo_new %>%
   ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
   # Cover areas that are shallower than our data
-  geom_tile(data = subset(velo_new_HD, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
+  geom_tile(data = subset(velo_full, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
   # Coast
   geom_polygon(data = coast, aes(x = x, y = y, group = group), fill = "grey30") +
-  annotate("rect", xmin = 3, xmax = 15, ymin = -10, ymax = 3, fill = NA, col = "#F7941D", lwd = 0.5) +
-  annotate("rect", xmin = -12, xmax = 0, ymin = -27, ymax = -7.5, fill = NA, col = "#F7941D", lwd = 0.5) +
-  annotate("rect", xmin = -24, xmax = -13, ymin = -10, ymax = 6, fill = NA, col = "#F7941D", lwd = 0.5) +
   # Current vectors
   geom_arrow(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity), size = 0.2, arrow.angle = 30,
              arrow.type = "open", arrow.length = 0.5) +
@@ -371,8 +375,8 @@ map_velo <- velo_new %>%
   # GAM locations
   # geom_tile(data = SA_new, aes(x = x, y = y), fill = NA, colour = "red", size = 3.8) + 
   # Scales
-  scale_fill_viridis_c("V", option = "viridis", limits = c(0, 6.5), end = 1, oob = scales::squish,
-                       alpha = 0.5, breaks = seq(0, 10, 1)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 4), end = 0.95, oob = scales::squish, 
+                     alpha = 0.7, breaks = seq(0, 10, 0.5)) +
   scale_x_continuous(breaks = seq(-50, 50 , 5)) +
   scale_y_continuous(breaks = seq(-50, 50 , 5)) +
   coord_fixed(xlim = c(-28, 28), ylim = c(-34, 20), expand = F) +
@@ -393,9 +397,9 @@ Base map.
 map_base <- velo_new_HD %>%
   ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
   # Cover areas that are shallower than our data
-  geom_tile(data = subset(velo_new_HD, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
+  geom_tile(data = subset(velo_full, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
   # Coast
   geom_polygon(data = coast, aes(x = x, y = y, group = group), fill = "grey30") +
   # Current vectors
@@ -412,8 +416,8 @@ map_base <- velo_new_HD %>%
   # GAM locations
   # geom_tile(data = SA_new, aes(x = x, y = y), fill = NA, colour = "red", size = 3.6) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
-                     alpha = 0.7, breaks = seq(0, 10, 1)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 4), end = 0.9, oob = scales::squish, 
+                     alpha = 0.7, breaks = seq(0, 10, 0.5)) +
   coord_fixed(xlim = c(-45, 45), ylim = c(-45, 45), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "right",
@@ -435,15 +439,15 @@ map_vectors <- velo_new %>%
   # filter(between(x, -40, 40) & between(y, -45, 40)) %>%
   ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
   # Coast
   geom_polygon(data = coast, aes(x = x, y = y, group = group), fill = "transparent") +
   # Current vectors
   geom_arrow(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity), skip = 0, size = 0.15, 
              arow.angle = 30, arrow.type = "open", arrow.length = 0.75) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
-                     alpha = 0, breaks = seq(0, 10, 1)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 4), end = 0.9, oob = scales::squish, 
+                     alpha = 0, breaks = seq(0, 10, 0.5)) +
   coord_fixed(xlim = c(-45, 45), ylim = c(-45, 45), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "right",
@@ -491,9 +495,9 @@ ymax <- 4
 map_BA <- velo_HD %>%
  ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
   # Cover areas that are shallower than our data
-  geom_tile(data = subset(velo_HD, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
+  geom_tile(data = subset(velo_full, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
   # Coast
   geom_polygon(data = coast, aes(x = x, y = y, group = group), fill = "grey30") +
   # # Current vectors
@@ -509,8 +513,8 @@ map_BA <- velo_HD %>%
   # GAM locations
   # geom_tile(data = SA_new, aes(x = x, y = y), fill = NA, colour = "red", size = 12) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
-                     alpha = 0.7, breaks = seq(0, 10, 1)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 4), end = 0.9, oob = scales::squish, 
+                     alpha = 0.7, breaks = seq(0, 10, 0.5)) +
   coord_fixed(xlim = c(xmin, xmax), ylim = c(ymin, ymax), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "none",
@@ -559,9 +563,9 @@ ymax <- -4
 map_BB <- velo_HD %>%
   ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
   # Cover areas that are shallower than our data
-  geom_tile(data = subset(velo_HD, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
+  geom_tile(data = subset(velo_full, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
   # Coast
   geom_polygon(data = coast, aes(x = x, y = y, group = group), fill = "grey30") +
   # Current vectors
@@ -577,8 +581,8 @@ map_BB <- velo_HD %>%
   # GAM locations
   # geom_tile(data = SA_new, aes(x = x, y = y), fill = NA, colour = "red", size = 11) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
-                     alpha = 0.7, breaks = seq(0, 10, 1)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 4), end = 0.9, oob = scales::squish, 
+                     alpha = 0.7, breaks = seq(0, 10, 0.5)) +
   coord_fixed(xlim = c(xmin, xmax), ylim = c(ymin, ymax), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "none",
@@ -627,9 +631,9 @@ ymax <- 6
 map_BF <- velo_HD %>%
   ggplot() +
   # Plot interpolated current velocity
-  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 1, na.fill = T) +
+  geom_contour_fill(aes(x = x, y = y, z = velocity), binwidth = 0.5, na.fill = T) +
   # Cover areas that are shallower than our data
-  geom_tile(data = subset(velo_HD, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
+  geom_tile(data = subset(velo_full, is.na(vxo) == T), aes(x = x, y = y), fill = "white", col = "white") +
   # Coast
   geom_polygon(data = coast, aes(x = x, y = y, group = group), fill = "grey30") +
   # # Current vectors
@@ -646,8 +650,8 @@ map_BF <- velo_HD %>%
   # GAM locations
   # geom_tile(data = SA_new, aes(x = x, y = y), fill = NA, colour = "red", size = 13) +
   # Scales
-  scale_fill_cmocean("", name = "delta", limits = c(0, 6), end = 0.95, oob = scales::squish, 
-                     alpha = 0.7, breaks = seq(0, 10, 1)) +
+  scale_fill_cmocean("", name = "delta", limits = c(0, 4), end = 0.9, oob = scales::squish, 
+                     alpha = 0.7, breaks = seq(0, 10, 0.5)) +
   coord_fixed(xlim = c(xmin, xmax), ylim = c(ymin, ymax), expand = F) +
   guides(mag = "none", alpha = "none", fill = guide_colorsteps(show.limits = T)) +
   theme(legend.position = "none",
